# conjugate

./: .gitignore  README.md
docs/: oauth-setup.md  todo.txt
src/docker/: .env.example  docker-compose.yml
src/docker/web/: Dockerfile
src/python/web/: README.md  pyproject.toml
src/python/web/tests/: test_grading.py  test_seed.py  test_settings.py
src/python/web/web/: api.py  auth.py  conjugation.py  grading.py  main.py  models.py  seed.py
src/python/web/web/data/: examples.json  verbs_seed.json
src/python/web/web/static/: app.js  index.html  styles.css
