[project]
name = "conjugate-web"
version = "0.1.0"
description = "European-Portuguese conjugation practice tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["web*"]

[tool.setuptools.package-data]
web = ["data/*.json", "static/*"]
